--- a/CSS/main.css
+++ b/CSS/main.css
@@ -157,3 +157,18 @@ body {
 	margin-top: auto;
 }
 
+
+.download-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-decoration: none;
+    background-color: #3498db;
+    color: #fff;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+  
+  .download-button:hover {
+    background-color: #2980b9;
+  }
